ingress/kubeapps/orangehrm/orangehrm-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: orangehrm
  namespace: hrm
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: orangehrm.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: tidy-offer-orangehrm
          servicePort: 80
